--- a/WavefrontOBJViewer/TODO.txt
+++ b/WavefrontOBJViewer/TODO.txt
@@ -1,3 +1,21 @@
 
 
 
+- fix green ship (why is it green?!?)
+  - fix/add basic lighting
+
+
+
+- add GLSL multi-texture shading
+
+- add mouse camera rotation
+
+- extend OpenTK to separate pinch-zoom vs double-finger gestures  (pinch zoom = precise scroll wheel)
+
+- add texture finalizer/dispose
+
+Cleanup
+-------
+
+- Make a GL caps enable/disable abstraction, which only changes things when render caps actually change
+- switch to 
