--- a/WavefrontOBJViewer/TODO.txt
+++ b/WavefrontOBJViewer/TODO.txt
@@ -1,9 +1,15 @@
 
+************************
+*
+*  TODO V1
+*
 
-=======
-TODO V1
--------
-
+- do the wavefront OBJ todos! 
+  - handle multi-line faces continued with "\"
+  - handle negative vertex indices in face specification
+  - handle "s" smoothing group
+  - handle "Tr"/"d" material transparency/alpha
+        
 - mouse camera dolly/pan (shift drag)
 
 - GLSL multi-texture shading ( GL 2.2 / GLSL 1.2 - diffuse, specular, bump)
@@ -20,73 +26,81 @@ TODO V1
 
 - face-selection (to demonstrate mouse-to-ray-to-geometry) - either click, or pre-selection highlight
 
-- do the wavefront OBJ todos! 
-
 - move screen projection computation to somewhere sensible
-
-- mouse object/face picking
 
 - code/ui to toggle draw modes (lines, flat/gourad, textured)
 
---------------------------------------
+************************
+*
+*  WRITE ARTICLE : Cross-Platform 3d app in C# OpenTK
+*
+************************
 
-   WRITE ARTICLE : Cross-Platform 3d app in C# OpenTK
+************************
+*
+*  WavefrontOBJLoader ideas...
+*
 
---------------------------------------
+- complete TODOs in the Wavefront Loader
 
-- do something with materials ??
+- switch to non-console app (put text-output in GUI?)
 
-- ? support open-gl non-robust mode (for unretained assets)
-
-- projected texture at mouse-target
-
-- extend OpenTK to separate pinch-zoom vs double-finger gestures  (pinch zoom = precise scroll wheel)
-
-- review OpenGL extensions
-  - http://www.opengl.org/registry/
-
-- add OpenTK Mac OpenGL 3.3 (cocoa window support)
-  - multi-window
-  - live resize
-  - GLSL 330, 2-pass ( glow-bloom, shadow maps, deferred lighting, ambient occlusion )
-
-Cleanup
--------
-
-- OpenTK: why is windows mouse-wheel direction the opposite of mac trackpad two-finger? 
-  - do we need to read the natural config paramater? did we get the direction wrong?
-  
-- OpenTK: Mac Cocoa, GL 3.3 support. GL 4.x support.
-  
-- APP: switch to non-console app (put text-output in GUI?)
-
-- ?? SimpleScene: compute object bounding-sphere and center ThirdPersonCamera?
-- ?? SimpleScene: GL caps enable/disable abstraction, which only changes things when render caps actually change
-- ?? OpenTK: extend to separate pinch-zoom vs double-finger gestures  (pinch zoom = precise scroll wheel)
-
-
-IDEAS for V2
--------
-
-- OBJ: complete TODOs in the Wavefront Loader
-
-- OBJ: new "streaming loader", so the model is not buffered in the loader
+- write "streaming loader", so the model is not buffered in the loader
 
 - write CR2 loader
-  - 
   - http://dj1.willowmail.com/~jeske/Projects/PoserCR2/kuroyumes/poserfilespec/introduction.html
-  
 
 - simple b-rep editing (Radial Edge, or X-Maps)
 
 - add Cycles offline rendering! (needs material editing)
 
-- GLSL Rendering: multi-pass techniques
-  - deferred lighting
-  - bloom
 
-DONE
------
+************************
+*
+*  SimpleScene Features
+*
+
+- compute mesh bounding sphere...
+- .. use it to do CPU frustrum culling
+
+- support open-gl non-robust mode (for unretained assets)
+
+- mouse object/face picking
+- projected texture "projected mouse cursor"
+
+- GL caps enable/disable abstraction, which only changes things when render caps actually change
+
+************************
+*
+*  OpenTK improvements
+*
+
+- BUG: OpenTK: why is windows mouse-wheel direction the opposite of mac trackpad two-finger? 
+  - do we need to read the natural config paramater? did we get the direction wrong?
+
+- extend to separate pinch-zoom vs double-finger gestures  (pinch zoom = precise scroll wheel)
+
+- OpenTK Mac OpenGL 3.3/4.0 (cocoa window support)
+
+- OpenTK window features (multi-window, live-resize)
+
+************************
+*
+*  3D research / learning
+*
+
+- do something with materials ??
+
+- GLSL 330, multi-pass ( glow-bloom, shadow maps, deferred lighting, ambient occlusion )
+
+- implement Bunny LOD
+
+- review OpenGL extensions ( http://www.opengl.org/registry/ )
+
+************************
+*
+*  DONE
+*
 
 - (done) add basic light
 - (done) mouse camera rotation
