--- a/WavefrontOBJViewer/TODO.txt
+++ b/WavefrontOBJViewer/TODO.txt
@@ -14,6 +14,8 @@
 
 - add cubemap environment map (and a cool background)
   - space aura skybox - https://www.youtube.com/watch?v=QLPYOn7RS8Y
+  - add textured-cubemesh-configured for skybox
+  - add infinite-object
 
 - check lighting... it should not change as camera moves! 
 - integrate gui2d
