--- a/WavefrontOBJViewer/TODO.txt
+++ b/WavefrontOBJViewer/TODO.txt
@@ -74,10 +74,16 @@
 *  NEXT IDEAS
 *
 
+     
 - add basic animation import (FBX?)
   http://code.blender.org/index.php/2013/08/fbx-binary-file-format-specification/
-
+     
 - make inset sub-scene cameras
+
+- Font/GDI rendering with vector textures
+  http://www.gamedev.net/topic/491938-signed-distance-bitmap-font-tool/
+  http://www.valvesoftware.com/publications/2007/SIGGRAPH2007_AlphaTestedMagnification.pdf
+  http://stackoverflow.com/questions/5262951/what-is-state-of-the-art-for-text-rendering-in-opengl-as-of-version-4-1
 
 - make HDR skybox
 
@@ -106,7 +112,9 @@
   - http://dj1.willowmail.com/~jeske/Projects/PoserCR2/kuroyumes/poserfilespec/introduction.html
 
 - simple b-rep editing (Radial Edge, or X-Maps)
-
+ 
+- experiment with 3d ui widgets
+  https://www.youtube.com/watch?v=oDulGQnjsDQ
 
 
 ************************
